<resources>
    <string name="app_name">KalkulatorBangunDatar</string>
    <string name="segitiga_title">Kalkulator Segitiga</string>
    <string name="panjang_alas">Panjang Alas Segitiga</string>
    <string name="tinggi">Tinggi Segitiga</string>
    <string name="hasil_title">Hasil Perhitungan Segitiga</string>
    <string name="btn_hitung">Hitung</string>
    <string name="hasil_output">Hasil perhitungan akan ditampilkan disini</string>
    <string name="trapesium_title">Kalkulator Trapesium</string>
    <string name="jajargenjang_title">Kalkulator Jajar Genjang</string>
    <string name="btn_kembali">kembali</string>
</resources>