<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-33dp">

        <TextView
            android:id="@+id/labelTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/segitiga_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelInputPanjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/panjang_alas"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputAlas"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/labelInputTinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tinggi"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputTinggi"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/labelOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:text="@string/hasil_title"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewOutput"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/hasil_output"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonHitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/btn_hitung"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>